objects/Discussion_Points__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Current Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Intelligence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Create_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_use_only__c</fullName>
        <label>Internal use only</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Discussion Points</relationshipLabel>
        <relationshipName>Discussion_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <label>No</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Discussion Points</relationshipLabel>
        <relationshipName>Discussion_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_company__c</fullName>
        <formula>IF( TEXT(Responsible_selection__c) == &apos;User&apos;,    Responsible_user__r.FirstName + &apos; &apos; +  Responsible_user__r.LastName +&apos;, &apos;+$Organization.Name , IF(TEXT(Responsible_selection__c) == &apos;Lead&apos;,   Lead__r.FirstName + &apos; &apos; +  Lead__r.LastName + &apos;, &apos; + Lead__r.Company,   Responsible_contact__r.FirstName + &apos; &apos; +  Responsible_contact__r.LastName + &apos;, &apos; +Responsible_contact__r.Account.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsible company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Discussion Points</relationshipLabel>
        <relationshipName>Discussion_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_selection__c</fullName>
        <label>Responsible</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsible_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Discussion_Points</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Trip_Report__c</fullName>
        <label>Call Report</label>
        <referenceTo>Trip_Report__c</referenceTo>
        <relationshipLabel>Discussion Points</relationshipLabel>
        <relationshipName>Discussion_Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>internal_use__c</fullName>
        <formula>IF(TEXT(Internal_use_only__c) == &apos;yes&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>internal use</label>
        <type>Checkbox</type>
    </fields>
    <label>Discussion Points</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discussion Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Exception</fullName>
        <active>true</active>
        <errorConditionFormula>Create_Error__c</errorConditionFormula>
        <errorMessage>Error</errorMessage>
    </validationRules>
</CustomObject>